--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8"/>
 <!-- 모바일 대응을 위한 뷰포트 기본 설정 -->
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
+<link href="entrance.css" rel="stylesheet" type="text/css" />
 <style>
 html {
 height: -webkit-fill-available;
