--- a/second page.html
+++ b/second page.html
@@ -24,7 +24,7 @@
         width: 250px;
         padding: 15px 0px;
         text-align: center;
-        color: #ffffff;
+        color: white;
               }
         </style>
     
