--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ color: #000000;
 
 <body>
 <div class="intro">
-    <A href = "second page.html" target = "링크 방법" > Explore </A>
+    <A href = "second page.html" > Explore </A>
 </div>
 </body>
 </html>
